# simple-cpp-actor

./: LICENSE  Makefile.am  README.md  bootstrap  configure.in
examples/: Makefile.am  step1.cpp
include/snower/: channel.h  logger.h  ring.h  singleton.h  thread_pool.h  thread_pool.inl
include/snower/actor/: actor.h  actor.inl  actor_address.h  actor_system.h  actor_system.inl  caller.h  mailbox.h
net/: Makefile.am  epoll.cpp  epoll.h  tcp.cpp  tcp.h
src/: Makefile.am  actor.cpp  actor_address.cpp  actor_system.cpp  logger.cpp
test/: Makefile.am  test_actor.cpp  test_logger.cpp  test_perf.cpp
